# conway-server

./: Cargo.toml
src/: http.rs  lib.rs  main.rs  pubsub.rs
static/: index.js  style.css
templates/: index.html.tera  index.js
