[package]
name = "conway_server"
version = "0.1.0"
authors = ["Dustin Rohde <dustin.rohde@gmail.com>"]

[dependencies]
conway = { path = "../conway" }
dotenv = "0.13.*"
lazy_static = "1.0.*"
rocket = "0.3.*"
rocket_codegen = "0.3.*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
tera = "0.11"
ws = "*"

[dependencies.rocket_contrib]
version = "0.3.*"
default_features = false
features = ["tera_templates"]
